# csPDM

./: CMakeLists.txt  EEG_run.cpp  EEG_run.h  README.md  csvparser.cc  csvparser.hh  input_mod.cpp  input_mod.h  main.cpp
examples/: input.txt  runSimFig7.py
lib/: CMakeLists.txt  arg.hh
lib/pdm/: Matrices.cpp  Matrices.h  Vectors.h  dgm.cpp  dgm.h  filt.cpp  filt.h  lif.cpp  lif.h  nrn_model.cpp  nrn_models.h  pdm.cpp  pdm.h
lib/prm/: argu.cc  argu.hh  ctrl_tag.hh  hdf5.cc  hdf5.hh  name_set.hh  prm.cc  prm.hh
lib/sim/: executable.hh  h5_file.cc  h5_file.hh  mt19937.cc  mt19937.hh  parser_add.hh  random.hh  runnable.hh  runner.cc  runner.hh  with_param.hh
